<resources>
    <string name="app_name">Кулига парк</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_error_ssl_date_invalid">The date of the certificate is invalid</string>
    <string name="notification_error_ssl_cert_invalid">SSL certificate invalid</string>
    <string name="notification_error_ssl_expired">The certificate has expired</string>
    <string name="notification_error_ssl_idmismatch">Hostname mismatch</string>
    <string name="notification_error_ssl_untrusted">The certificate authority is not trusted</string>
    <string name="notification_error_ssl_invalid">A generic error occurred</string>
    <string name="notification_error_ssl_not_yet_valid">The certificate is not yet valid</string>

<!--    fulljava    -->

    <string name="text_button_login">Войти</string>
    <string name="text_input_password">Ваш пароль</string>
    <string name="text_input_login">Ваш E-mail</string>
    <string name="text_input_rep_password">Repeat password</string>
    <string name="text_button_registration">Зарегистрироваться</string>
    <string name="text_button_signin">Sign in</string>
    <string name="text_register">Register</string>
    <string name="invalid_email">Некорректно введен e-mail</string>
    <string name="invalid_password">Пароль должен содержать минимум 5 символов</string>
    <string name="invalid_passwordR">Пароли должны совпадать</string>
    <string name="invalid_code">Код должен состоять минимум из 8 символов</string>
    <string name="invalid_number">Некорректно введен номер телефона</string>
    <string name="invalid_name">Поле должно содержать хотя бы 1 символ</string>
    <string name="invalid_date">Некорректно введена дата</string>
    <string name="text_no_account">Нет аккаунта?</string>
    <string name="text_registration">Регистрация</string>
    <string name="text_input_code">Регистрационный код</string>
    <string name="text_regcode_subtitle">Введите регистрационный код с чека без учета дефиса.</string>
    <string name="text_input_reg_email">Электронная почта</string>
    <string name="text_input_reg_password">Пароль</string>
    <string name="text_input_reg_number">Телефон</string>
    <string name="text_input_reg_reppassword">Повторите пароль</string>
    <string name="text_url">https://kuliga-park.ru/rezhim-raboty-i-kontakty/</string>
    <string name="text_url_vk">https://vk.com/kuligapark72</string>
    <string name="text_url_inst">https://www.instagram.com/kuligapark/</string>
    <string name="text_url_youtube">https://www.youtube.com/</string>
    <string name="text_check_agree">Соглашаюсь со всеми правилами и политиками, размещенными на <a href="https://kuliga-park.ru/rezhim-raboty-i-kontakty/">сайте</a>.</string>
    <string name="text_pass_recreate">Восстановление пароля</string>
    <string name="text_pass_recreate_subtitle">На указанный электронный адрес будет отправлен код для восстановления пароля</string>
    <string name="text_button_pass_recreate">Выслать код</string>
    <string name="text_club_card">Клубная карта</string>
    <string name="text_balance">Баланс: </string>
    <string name="text_balance_subtitile">0.0 RUB</string>
    <string name="text_card_subtitle">00000000</string>
    <string name="text_ski_pass">Мой\nски-пас</string>
    <string name="text_shopping">Услуги</string>
    <string name="text_map">Карта\nпарка</string>
    <string name="text_hostel">Гостиница\n</string>
    <string name="text_documents">Документы</string>
    <string name="text_menu_main">Главная</string>
    <string name="text_menu_orders">Мои заказы</string>
    <string name="text_menu_account">Аккаунт</string>
    <string name="text_menu_logout">Выход</string>
    <string name="text_menu_history">История</string>
    <string name="text_menu_cards">Мои карты</string>
    <string name="text_menu_stock">Акции</string>
    <string name="text_menu_map">Интерактивная карта</string>
    <string name="text_menu_weather">Информер погоды</string>
    <string name="text_menu_contacts">Контакты</string>
    <string name="text_profile">Профиль</string>
    <string name="text_input_fullname">Фамилия</string>
    <string name="text_input_name">Имя</string>
    <string name="text_input_surename">Отчество</string>
    <string name="text_input_birthdate">Дата рождения</string>
    <string name="text_male">Пол:</string>
    <string name="text_check_male">Мужской</string>
    <string name="text_check_female">Женский</string>
    <string name="text_email_subtitle">Будьте внимательны! При изменении адреса электронной почты меняется логин для входа в мобильное приложение.</string>
    <string name="text_button_save">Сохранить</string>
    <string name="text_button_cancel">Отмена</string>
    <string name="text_button_nopass">Не помню</string>
    <string name="text_ski_pass_add">Пополнение скипаса</string>
    <string name="text_select_card">Выберите карту</string>
    <string name="text_select_summ">Введите сумму</string>
    <string name="text_button_pay">Оплатить</string>
    <string name="text_pay_error">Ошибка при совершени покупки.</string>
    <string name="text_pay_success">Покупка совершена успешно.</string>
    <string name="text_button_ok">Ок</string>
    <string name="text_services">Услуги</string>
    <string name="text_services_summer">Лето</string>
    <string name="text_services_winter">Зима</string>
    <string name="text_map_title">Карта парка</string>
    <string name="text_title_service">Услуги парка</string>
    <string name="text_service_time">Количество</string>
    <string name="text_service_work">Вс</string>
    <string name="text_temperatur">°C</string>
    <string name="text_condition">Облачно</string>
    <string name="text_date">05 февраля, 2022</string>
    <string name="text_mail_park">adm@kuliga-park.ru</string>
    <string name="text_adress">Факт. адрес</string>
    <string name="text_adress_title">Тюменская область, д. Кулига, 32-й км Ирбитского тракта</string>
    <string name="text_time_work">15:00-21:00 \n10:00-21:00</string>
    <string name="text_days_work">Вторник-четверг \nПятница-Воскресенье</string>
    <string name="text_time_work_titile">Время работы</string>
    <string name="text_number">+7 (3452) 562-080</string>
    <string name="text_add_card">Добавить карту</string>
    <string name="text_no_cards">У вас еще нет карт.</string>
    <string name="text_title_id">Идентификатор</string>
    <string name="text_title_category">Категория</string>
    <string name="text_title_type">Тип</string>
    <string name="text_title_tariff">Тариф</string>
    <string name="text_title_valid_from">Работает с</string>
    <string name="text_title_valid_to">Истекает</string>
    <string name="text_title_balance">Баланс карты</string>
    <string name="text_title_add_card">Введите идентификатор карты</string>
    <string name="text_title_history">История операций</string>
    <string name="text_history_error">История операций пуста.</string>
    <string name="text_title_hr_popoln">Пополнение через интернет</string>
    <string name="text_title_time">12:00</string>
    <string name="text_title_date">01.01.2022</string>
    <string name="text_order_error">История закозов пуста.</string>
    <string name="text_stocks_error">Сейчас нет акций.</string>
    <string name="text_button_cancel_two">Назад</string>
</resources>