<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:title="@string/text_menu_orders" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/text_menu_history"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/text_menu_account"/>
        <item
            android:id="@+id/nav_cards"
            android:title="@string/text_menu_cards"/>
        <item
            android:id="@+id/nav_stock"
            android:title="@string/text_menu_stock"/>
        <item
            android:id="@+id/nav_map"
            android:title="@string/text_menu_map"/>
        <item
            android:id="@+id/nav_weather"
            android:title="@string/text_menu_weather"/>
        <item
            android:id="@+id/nav_contacts"
            android:title="@string/text_menu_contacts"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/text_menu_logout" />
    </group>
</menu>