<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_black"
                android:padding="10dp"
                android:text="@string/text_profile"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/profile_input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:ems="10"
                android:hint="@string/text_input_fullname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/profile_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:ems="10"
                android:hint="@string/text_input_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/profile_input_middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:ems="10"
                android:hint="@string/text_input_surename"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/profile_input_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/background_field_fulljava"
                    android:ems="10"
                    android:hint="@string/text_input_birthdate"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="65dp" />

                <ImageButton
                    android:id="@+id/profile_button_calendar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_calendar"
                    tools:ignore="SpeakableTextPresentCheck" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/text_male"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/profile_check_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/text_check_male"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/profile_check_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/text_check_female"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/profile_input_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:ems="10"
                android:hint="@string/text_input_reg_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp" />

            <EditText
                android:id="@+id/profile_input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:editable="false"
                android:ems="10"
                android:hint="@string/text_input_reg_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingHorizontal="10dp"
                tools:ignore="Deprecated" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:gravity="top"
                    android:text="@string/text_email_subtitle"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profile_text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:visibility="invisible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/profile_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_button_fulljava"
                android:fontFamily="@font/montserrat_black"
                android:text="@string/text_button_save"
                android:theme="@style/GreenButton" />

            <Button
                android:id="@+id/profile_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_button_fulljava"
                android:fontFamily="@font/montserrat_black"
                android:stateListAnimator="@null"
                android:text="@string/text_button_cancel"
                android:textAllCaps="false"
                android:textColor="@color/green"
                android:theme="@style/NoColorButton" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DAFAFAF"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/profile_img_ok"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_check_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/profile_bar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>