<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black"
            android:padding="10dp"
            android:text="@string/text_registration"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registration_input_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_code"
            android:inputType="textAutoComplete"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="3dp"
                android:src="@drawable/ic_info" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="top"
                android:text="@string/text_regcode_subtitle"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/registration_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_reg_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/registration_input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_reg_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/registration_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_reg_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/registration_input_passwordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_reg_reppassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/registration_check_agree"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center|top"
                android:minWidth="0dp"
                android:minHeight="0dp" />

            <TextView
                android:id="@+id/registration_text_agree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:clickable="true"
                android:fontFamily="@font/montserrat"
                android:gravity="top"
                android:linksClickable="true"
                android:minHeight="48dp"
                android:text="@string/text_check_agree"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/registration_text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_button_fulljava"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/text_button_registration"
            android:theme="@style/YellowButton" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DAFAFAF"
        android:clickable="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/registration_img_ok"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_check_circle"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/registration_bar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>