<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_fulljava" />

        <EditText
            android:id="@+id/login_input_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_field_fulljava"
            android:ems="10"
            android:hint="@string/text_input_login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_nopass_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:text="@string/text_button_nopass"
                android:textAllCaps="false"
                android:textColor="#A3A3A3"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_field_fulljava"
                android:ems="10"
                android:hint="@string/text_input_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="100dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/login_text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="invisible" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_fulljava"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/text_button_login"
            android:theme="@style/GreenButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="bottom"
            android:text="@string/text_no_account"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/login_reg_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_button_fulljava"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/text_button_registration"
            android:theme="@style/YellowButton" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DAFAFAF"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>